--- a/index.html
+++ b/index.html
@@ -11,75 +11,93 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bilbo+Swash+Caps&family=Montserrat:wght@400;700&family=Roboto+Slab&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bilbo+Swash+Caps&family=Montserrat:wght@400;700&family=Roboto+Slab&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header class="header">
       <div class="container">
         <p class="logo">Golden</p>
-      <nav class="nav">
-        <ul class="nav-list list">
-          <li class="nav-item"><a href="" class="nav-link">Home</a></li>
-          <li class="nav-item"><a href="" class="nav-link">Services</a></li>
-          <li class="nav-item"><a href="" class="nav-link">Portfolio</a></li>
-          <li class="nav-item"><a href="" class="nav-link">About</a></li>
-          <li class="nav-item"><a href="" class="nav-link">Contact</a></li>
-        </ul>
-      </nav>
+        <nav class="nav">
+          <ul class="nav-list list">
+            <li class="nav-item"><a href="" class="nav-link">Home</a></li>
+            <li class="nav-item"><a href="" class="nav-link">Services</a></li>
+            <li class="nav-item"><a href="" class="nav-link">Portfolio</a></li>
+            <li class="nav-item"><a href="" class="nav-link">About</a></li>
+            <li class="nav-item"><a href="" class="nav-link">Contact</a></li>
+          </ul>
+        </nav>
       </div>
     </header>
     <main>
       <section class="services">
         <div class="container">
           <h2 class="services-title">Services</h2>
-        <ul class="services-list">
-          <li class="services-item">
-            <h3 class="services-item-title">E-Commerce</h3>
-            <p class="services-item-text">
-              Proin iaculis purus consequat sem cure  digni ssim. Donec
-              porttitora entum suscipit  aenean rhoncus posuere odio in
-              tincidunt.
-            </p>
-          </li>
-          <li class="services-item">
-            <h3 class="services-item-title">Responsive Web</h3>
-            <p class="services-item-text">
-              Proin iaculis purus consequat sem cure  digni ssim. Donec
-              porttitora entum suscipit  aenean rhoncus posuere odio in
-              tincidunt.
-            </p>
-          </li>
-          <li class="services-item">
-            <h3 class="services-item-title">Web Security</h3>
-            <p class="services-item-text">
-              Proin iaculis purus consequat sem cure  digni ssim. Donec
-              porttitora entum suscipit  aenean rhoncus posuere odio in
-              tincidunt.
-            </p>
-          </li>
-        </ul>
+          <ul class="services-list list">
+            <li class="services-item">
+              <h3 class="services-item-title">E-Commerce</h3>
+              <p class="services-item-text">
+                Proin iaculis purus consequat sem cure  digni ssim. Donec
+                porttitora entum suscipit  aenean rhoncus posuere odio in
+                tincidunt.
+              </p>
+            </li>
+            <li class="services-item">
+              <h3 class="services-item-title">Responsive Web</h3>
+              <p class="services-item-text">
+                Proin iaculis purus consequat sem cure  digni ssim. Donec
+                porttitora entum suscipit  aenean rhoncus posuere odio in
+                tincidunt.
+              </p>
+            </li>
+            <li class="services-item">
+              <h3 class="services-item-title">Web Security</h3>
+              <p class="services-item-text">
+                Proin iaculis purus consequat sem cure  digni ssim. Donec
+                porttitora entum suscipit  aenean rhoncus posuere odio in
+                tincidunt.
+              </p>
+            </li>
+          </ul>
         </div>
       </section>
       <section class="contact-us">
         <div class="container">
           <h2 class="contact-us-title">Contact us</h2>
-        <form action="" class="contact-us-form">
-          <input class="contact-us-input" type="text" placeholder="Your name" name="username"/>
-          <input class="contact-us-input" type="email" placeholder="Your e-mail" name="e-mail"/>
-          <input class="contact-us-input" type="text" placeholder="Subject" name="subject"/>
-          <textarea
-            name="Comment"
-            id="Comment"
-            cols="30"
-            rows="10"
-            placeholder="Your message"
-            class="contact-us-textarea"
-          ></textarea>
-          <button class="contact-us-btn" type="submit">Send message</button>
-        </form>
+          <form action="" class="contact-us-form">
+            <input
+              class="contact-us-input"
+              type="text"
+              placeholder="Your name"
+              name="username"
+            />
+            <input
+              class="contact-us-input"
+              type="email"
+              placeholder="Your e-mail"
+              name="e-mail"
+            />
+            <input
+              class="contact-us-input"
+              type="text"
+              placeholder="Subject"
+              name="subject"
+            />
+            <textarea
+              name="Comment"
+              id="Comment"
+              cols="30"
+              rows="10"
+              placeholder="Your message"
+              class="contact-us-textarea"
+            ></textarea>
+            <button class="contact-us-btn" type="submit">Send message</button>
+          </form>
         </div>
       </section>
     </main>
