--- a/index.html
+++ b/index.html
@@ -70,24 +70,26 @@
         <div class="container">
           <h2 class="contact-us-title">Contact us</h2>
           <form action="" class="contact-us-form">
-            <input
-              class="contact-us-input"
-              type="text"
-              placeholder="Your name"
-              name="username"
-            />
-            <input
-              class="contact-us-input"
-              type="email"
-              placeholder="Your e-mail"
-              name="e-mail"
-            />
-            <input
-              class="contact-us-input"
-              type="text"
-              placeholder="Subject"
-              name="subject"
-            />
+            <div class="contact-us-form-box">
+              <input
+                class="contact-us-input"
+                type="text"
+                placeholder="Your name"
+                name="username"
+              />
+              <input
+                class="contact-us-input"
+                type="email"
+                placeholder="Your e-mail"
+                name="e-mail"
+              />
+              <input
+                class="contact-us-input"
+                type="text"
+                placeholder="Subject"
+                name="subject"
+              />
+            </div>
             <textarea
               name="Comment"
               id="Comment"
